<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MielFragment">


   <com.google.android.material.appbar.AppBarLayout
       android:id="@+id/App_bar"
       android:layout_width="match_parent"
       android:backgroundTint="@color/blue"
       android:layout_height="230dp">


       <com.google.android.material.appbar.CollapsingToolbarLayout
           android:id="@+id/collapsing_toolbar"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:contentScrim="@color/black"
           app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
           app:title="Meal name">

           <ImageView
               android:id="@+id/image_random_miel"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               app:layout_collapseMode="parallax"/>
           
           
           <androidx.appcompat.widget.Toolbar
               android:id="@+id/toolbar"
               android:layout_width="match_parent"
               android:layout_height="?android:actionBarSize"
               app:layout_collapseMode="pin"/>


       </com.google.android.material.appbar.CollapsingToolbarLayout>

   </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/fragment_op"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_24"
        android:backgroundTint="@color/red"
        android:tint="@color/white"
        app:layout_anchor="@id/App_bar"
        app:layout_anchorGravity="bottom|end"
        android:layout_margin="10dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/linear_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/baseline_category_24"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/ic_area"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_v"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_bar"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="17sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    
    <ImageView
        android:id="@+id/image_you_tube"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center"
        android:src="@drawable/ic_youtube"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/App_bar"
        app:layout_anchorGravity="bottom"
        android:visibility="gone"/>





</androidx.coordinatorlayout.widget.CoordinatorLayout>